fix: custom title bar covered by content

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@
 	top: 0;
 	left: 0;
 	right: 0;
+	z-index: 100;
 }
 .titlebar > .controls {
 	display: flex;
